--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
             - /dev/net/tun
         environment:
             - VPN_ENABLED=yes
-            - VPN_USER=p4285743
-            - VPN_PASS=K6siPuKk9S
+            - VPN_USER=***
+            - VPN_PASS=***
             - VPN_PORT=1198
             - VPN_PROTOCOL=udp
             - VPN_DEVICE_TYPE=tun
